--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
-    .custom-card {
-      background-color: #f0f0f0; /* Replace this with your desired background color */
-    }
+     
+
+     .card {
+  margin-bottom: 20px; /* Adjust the value to set the desired padding between ads */
+  border: none; /* Remove border for the cards */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for a lifted effect */
+  background-color: #f0f0f0; /* Change this value to your desired background color */
+  margin-top: 20px; /* Add margin-top for spacing at the top of the cards */
+  padding: 15px; /* Add padding to create space inside the card */
+  background-clip: padding-box; /* Ensure the padding color doesn't bleed into the border */
+  border-radius: 8px; /* Optional: Add border radius for rounded corners */
+  position: relative; /* Position relative to use z-index */
+}
+
+
+
   </style>
 </head>
 
