Enhanced filter input field with thicker border and light gray background using Bootstrap form-control

--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 
      .card {
   margin-bottom: 20px; /* Adjust the value to set the desired padding between ads */
-  border: none; /* Remove border for the cards */
+  border: 2px; /* Remove border for the cards */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for a lifted effect */
   background-color: #f0f0f0; /* Change this value to your desired background color */
+  
   margin-top: 20px; /* Add margin-top for spacing at the top of the cards */
-  padding: 15px; /* Add padding to create space inside the card */
+  padding: 30px; /* Add padding to create space inside the card */
   background-clip: padding-box; /* Ensure the padding color doesn't bleed into the border */
   border-radius: 8px; /* Optional: Add border radius for rounded corners */
   position: relative; /* Position relative to use z-index */
 }
+#filterTitle {
+  border: 1px solid #000; /* Set a thicker border */
+  background-color: #f0f0f0; /* Set a light gray background */
+}
+
 
 
 
