--- a/index.html
+++ b/index.html
@@ -8,28 +8,40 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
-     
+    .card {
+      margin-bottom: 20px; /* Adjust the value to set the desired padding between ads */
+      border: none; /* Remove border for the cards */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for a lifted effect */
+      background-color: #f0f0f0; /* Change this value to your desired background color */
+      margin-top: 20px; /* Add margin-top for spacing at the top of the cards */
+      padding: 30px; /* Add padding to create space inside the card */
+      background-clip: padding-box; /* Ensure the padding color doesn't bleed into the border */
+      border-radius: 8px; /* Optional: Add border radius for rounded corners */
+      position: relative; /* Position relative to use z-index */
+    }
 
-     .card {
-  margin-bottom: 20px; /* Adjust the value to set the desired padding between ads */
-  border: 2px; /* Remove border for the cards */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for a lifted effect */
-  background-color: #f0f0f0; /* Change this value to your desired background color */
-  
-  margin-top: 20px; /* Add margin-top for spacing at the top of the cards */
-  padding: 30px; /* Add padding to create space inside the card */
-  background-clip: padding-box; /* Ensure the padding color doesn't bleed into the border */
-  border-radius: 8px; /* Optional: Add border radius for rounded corners */
-  position: relative; /* Position relative to use z-index */
-}
-#filterTitle {
-  border: 1px solid #000; /* Set a thicker border */
-  background-color: #f0f0f0; /* Set a light gray background */
-}
+    .card-background {
+      position: absolute;
+      top: -10px; /* Adjust this value to change how much the red background extends above the card */
+      left: 0;
+      right: 0;
+      height: 10px; /* Adjust this value to change the height of the red background above the card */
+      background-color: red; /* Change this to your desired background color */
+      z-index: -1; /* Ensure it stays behind the card content */
+      border-radius: 8px 8px 0 0; /* Match the border-radius of the card for smooth edges */
+    }
 
+    #filterTitle {
+      border: 1px solid #000; /* Set a thicker border */
+      background-color: #f0f0f0; /* Set a light gray background */
+    }
 
-
-
+    .background-container {
+      background-color: #f0f0f0; /* Set the beige background color */
+      padding: 20px;
+      border: 1px solid #000; /* Thin black border */
+      border-radius: 8px; /* Optional: Add border radius for rounded corners */
+    }
   </style>
 </head>
 
@@ -44,8 +56,10 @@
       <input type="text" class="form-control" id="filterTitle" placeholder="Enter title">
     </div>
 
-    <div id="advertisements" class="row">
-      <!-- Advertisements will be inserted here dynamically -->
+    <div class="background-container">
+      <div id="advertisements" class="row">
+        <!-- Advertisements will be inserted here dynamically -->
+      </div>
     </div>
   </div>
 
